--- a/common/common.scss
+++ b/common/common.scss
@@ -533,4 +533,8 @@ img.select-thumbnail-preview {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 0 0 0 rgba(0, 0, 0, 0.12);
 }
 
+.like-color-style{
+  color: var(--love); 
+}
+
 
