--- a/common/common.scss
+++ b/common/common.scss
@@ -83,13 +83,13 @@
       "meta meta meta meta actions";
   }
 
-  .tiles-grid-item:hover {
-    background-color: var(--blend-primary-secondary-5);
+//   .tiles-grid-item:hover {
+//     background-color: var(--blend-primary-secondary-5);
 
-    .topic-thumbnail img {
-      opacity:0.7;
-    }
-  }
+//     .topic-thumbnail img {
+//       opacity:0.7;
+//     }
+//   }
 
   .topic-header-grid {
     grid-area: theader;
@@ -335,25 +335,25 @@ button.list-button {
   }
 
   &.has-like,
-  &.topic-like:not([disabled]):hover {
-    color: var(--love);
-  }
+//   &.topic-like:not([disabled]):hover {
+//     color: var(--love);
+//   }
 
-  &.has-like[disabled]:hover {
-    background: transparent;
-  }
+//   &.has-like[disabled]:hover {
+//     background: transparent;
+//   }
 
   &.has-like[disabled]:active {
     box-shadow: none;
   }
 
-  &.bookmarked,
-  &.topic-bookmark:hover {
-    i.fa-bookmark,
-    .d-icon-bookmark {
-      color: var(--tertiary);
-    }
-  }
+//   &.bookmarked,
+//   &.topic-bookmark:hover {
+//     i.fa-bookmark,
+//     .d-icon-bookmark {
+//       color: var(--tertiary);
+//     }
+//   }
 }
 
 .user-main .list-button {
@@ -525,9 +525,9 @@ img.select-thumbnail-preview {
     display: inline-block;
   }
 
-  &:hover {
-    background-color: var(--tertiary-hover);
-  }
+//   &:hover {
+//     background-color: var(--tertiary-hover);
+//   }
 }
 
 .tiles-grid-item {
